Fixes scrollbar

--- a/app/assets/stylesheets/sephora_style_guide/app/tabs.scss
+++ b/app/assets/stylesheets/sephora_style_guide/app/tabs.scss
@@ -52,11 +52,24 @@
     }
 
     @include mobile {
+      max-height: 35px;
+      overflow: hidden;
+      
+      >ul {
+        width: 100%;
+        height: 50px;
+        text-align: justify;
+        line-height: 0;
+        white-space: nowrap;
+        overflow: auto;
+        -webkit-overflow-scrolling: touch;
+        overflow-y: hidden;
+      }
 
       >ul li {
         border: 0;
         
-        &:last-child {
+        &:first-child {
           border: 0;
         }
 
@@ -101,8 +114,12 @@
 
   .secondary {
     .tabs {
+      max-height: 35px;
+      overflow: hidden;
+
       > ul {
         width: 100%;
+        height: 50px;
         text-align: justify;
         line-height: 0;
         white-space: nowrap;
